k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      compontent: worker
  template: 
    metadata: 
      labels:
        compontent: worker
    spec:
      containers: 
        - name: worker
          image: moberlander08/multi-worker
